k8s/laravel.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sfa-app
  namespace: sfa
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sfa-app
  template:
    metadata:
      labels:
        app: sfa-app
    spec:
      containers:
        - name: sfa-app
          image: sfa:latest
          imagePullPolicy: never
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 5

---

apiVersion: v1
kind: Service
metadata:
  name: sfa-app
  namespace: sfa
spec:
  selector:
    app: sfa-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
