k8s/mysql.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: sfa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
      spec:
        containers:
          - name: mysql
            image: mysql:8.4.9
            imagePullPolicy: IfNotPresent
            ports:
              - containerPort: 3306
            volumeMounts:
              - name: mysql-persistent-storage
                mountPath: /var/lib/mysql

            readinessProbe:
              tcpSocket:
                port: 3306
              initialDelaySeconds: 20
              periodSeconds: 10

            livenessProbe:
              tcpSocket:
                port: 3306
              initialDelaySeconds: 30
              periodSeconds: 20

        volumes:
          - name: mysql-persistent-storage
            persistentVolumeClaim:
              claimName: mysql-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: sfa
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
